--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -17,12 +17,12 @@
   <link rel="manifest" href="/index.webmanifest">
   
   
-  <link rel="icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_2.png">
-  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png">
+  <link rel="icon" type="image/png" href="/images/icon_huf413a004fce39df2dcec5f91e6a77878_60348_32x32_fill_lanczos_center_2.png">
+  <link rel="apple-touch-icon" type="image/png" href="/images/icon_huf413a004fce39df2dcec5f91e6a77878_60348_192x192_fill_lanczos_center_2.png">
 
   <link rel="canonical" href="/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Muneeb</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/theme/black.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/dracula.min.css" crossorigin="anonymous" id="highlight-theme">
 
